--- a/src/main/resources/static/css/styles2.css
+++ b/src/main/resources/static/css/styles2.css
@@ -2,62 +2,44 @@
 
 html,body{
     margin:0;
+    background-color: #f2f4f7; 
 }
 
-
-
-/*pesticide.io analog*/
-/* html * {
-  background: rgba(255, 0, 0, 0.1);
-  box-shadow: 0 0 0 1px red;
-} */
 
 #partWithLogo {
   /* background-color: cornsilk; */
-  height: 200px;
-  margin-left: 90px;
-  margin-right: 90px;
-}
-.col-lg-3 {
-  background-color: red;
-}
-#bookLogo {
-  position: relative;
-  border-radius: 50%;
-  height: 180px;
-  margin-left: 50px;
+  height: auto;
+  margin-top:1%;
+  margin-left: 13%;
+  margin-right: 13%;
 }
 
-.TitleText {
-  font-family: sans-serif;
-  justify-content: center;
-  width: inherit;
-  margin-left: 4rem;
+#bookLogo{
+    height:110px;
+    width:320px;
 }
+
+
+
 #searchText {
   position: relative;
   width: 300px;
-  top: 50px;
-  height: 30px;
-  right: 30px;
+  top: 25px;
+  height: 40px;
+  right: 50px;
 }
+
+
 #form {
   position: relative;
   top: 40px;
   right: 60px;
 }
 
-#searchSelect {
-  position: relative;
-  top: 50px;
-  right: 4px;
-  height: 30px;
-  right: 36px;
-  width: 120px;
-}
+
 #searchButton {
-  top: 50px;
-  right: 14px;
+  top: 25px;
+  right: 0px;
   background-color: yellow;
   color: #ffd04d;
   background-image: url(https://www.hive.co.uk//Content/StoreFront/assets/CSS/images/search.png);
@@ -71,22 +53,76 @@ html,body{
   border-color: #ffd04d;
   border-radius: 0 3px 3px 0;
   display: flex;
-  height: 30px;
+  height: 40px;
   width: 30px;
   position: absolute;
 }
-.LoginRow {
+#Login {
   position: relative;
-  top: 50px;
+  top: 45%;
 }
 
-#LoginText {
-  font-size: x-small;
+#Myaccount {
+    /*! display: flex; */
+    /*! position: absolute; */
+    /*! height: 50px; */
+    margin-top: 40%;
+}
+
+#cart {
+	position: relative;
+	display: block;
+	color: black;
+	/*! top: 18px; */
+	cursor: pointer;
+	/* margin-left: 40px; */
+	height: 80px;
+	width: 80px;
+	flex: 1 1 max-content;
+	left: 30px;
+	bottom: 20px;
+        margin-top:30%;
+}
+
+#cart-img {
+	background-image: url("basket.optimized.svg");
+	background-size: 130px 110px;
+	background-repeat: no-repeat;
+	width: 130px;
+	height: 110px;
+	/*! top: 20px; */
+	position: relative;
+}
+
+#cart-amount {        
+    position: relative;
+    top: 34px;
+    left: 31px;
+    width: min-content;
+    z-index: 2;
+}
+        
+#cart a {
+	/*! bottom: 200px; */
+        /*! left: 36px; */
+	position: relative;
+        text-decoration: none;
+        color: black;
+        display: block;
+	width: 111px;
+	height: 65px;
+}   
+    
+.clickable {
+ height: 80px;
+ width: 80px;
+ right: 50px;
+ position: relative;
 }
 
 #basketIcon {
-  border-radius: 50%;
-  background-color: yellow;
+    margin-top:14%;
+ margin-left: 50px;
   color: #ffd04d;
   height: 40px;
   width: 40px;
@@ -104,23 +140,71 @@ html,body{
   border-radius: 100%;
   padding-top: 1px;
   text-align: center;
+  left: 40px;
 
-  top: 0px;
+  top: 10%;
   font-family: proxima-nova, arial, sans-serif;
 }
 
-/* Να δεις γιατί δεν παίζει σαν Selector!!! , dhl hr{....} */
-#hr {
-  border-top: 1px dashed black;
+/*edw teleiwse to header*/
+
+/*edw ksekinaei to hovermenu  kai to  text*/
+/* The container <div> - needed to position the dropdown content */
+.section{
+    margin-top:0;
+    height:auto;
 }
+.dropdown {
+  position: relative;
+  display: inline-block;
+  
+ }
+ .dropbtn{
+     width:8em;
+ }
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  text-align:center;
+  width:300px;
+  background-color: #f1f1f1;
+  min-width: 200px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {sbackground-color: #ddd;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+/*.dropdown:hover .dropbtn {background-color: #3e8e41;}*/
+
+
+
 
 /* inherit property, tha klhronomhsei to property tou section, tou parent element */
 #freeHomeDelivery {
-  height: inherit;
-  width: 200px;
+  height:inherit ;
+  width: auto;
   /* me ton sunduasmo position absolute kai margin-right(right)=0, mou phgainei to element terma deksia */
-  position: absolute;
-  right: 70px;
+  position: relative;
+  
+  
+ 
   border: solid 1px grey;
   background-color: aquamarine;
 }
@@ -128,6 +212,8 @@ html,body{
 #freeHomeDeliveryText {
   margin: 0;
   position: absolute;
+  font-size:1em ;
+  left:30px;
   top: 50%;
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
@@ -143,22 +229,21 @@ html,body{
 #bookOfTheMonth {
   margin-top: 0;
   height: auto;
-  width: 100%;
-  background-color: blanchedalmond;
+  margin:0 13%;
 }
 
 #bookMonthDiv {
   height: inherit;
-  margin: 0 20%;
+ 
 }
 
 /*  */
 #monthBookImage {
   margin-top: 5%;
   margin-bottom: 5%;
-  margin-left: 15%;
-  height:240px;
-  width:150px;
+  margin-left: 20%;
+  height:280px;
+  width:200px;
   justify-content: center;
   align-items: center;
 }
@@ -180,15 +265,15 @@ html,body{
 
 /* author of the month css*/
 #authorOfTheMonth {
-  margin-top: 0;
+  margin-top: ;
   height: auto;
-  width: 100%;
-  background-color: blanchedalmond;
+  
+  margin: 20px 20%;
 }
 
 #authorMonthDiv {
   height: inherit;
-  margin: 0 20%;
+  
 }
 
 /*  */
@@ -235,6 +320,11 @@ html,body{
   margin: 0 15%;
 }
 
+.UpcomingText{
+    margin-top:10px;
+    
+}
+
 #verticalLine {
   border-left: solid grey;
   margin-left: 6px;
@@ -243,12 +333,15 @@ html,body{
 /* upcoming books */
 #upcomingBooks {
   width:700px;
-  margin: 0 15%;
+  margin-bottom: 0;
+  margin-top: 0;
+  margin-left: 19%;
+  
   
 }
 
-.img-responsive{
-    height: 150px;
-    width:100px;
+.img-responsive1{
+    height: 200px;
+    width:240px;
 }
 
