--- a/src/main/resources/static/css/multipleItemsCarousel.css
+++ b/src/main/resources/static/css/multipleItemsCarousel.css
@@ -1,4 +1,4 @@
-.multi-item-carousel .carousel-inner > .item {
+/* .multi-item-carousel .carousel-inner > .item {
   transition: 500ms ease-in-out left;
 }
 .multi-item-carousel .carousel-inner .active.left {
@@ -27,10 +27,7 @@
 .multi-item-carousel .carouse-control.right {
   background-image: none;
 }
-body {
-  
-  color: #ddd;
-}
+
 h1 {
   color: white;
   font-size: 2.25em;
@@ -40,9 +37,7 @@ h1 {
   text-shadow: 0px 2px 0px #000000;
 }
 
-#theCarousel{
-    width:900px;
-    height:200px;
+#theCarousel, #theCarousel2 {
     
 }
-
+ */
