--- a/src/main/webapp/WEB-INF/views/header.jspf
+++ b/src/main/webapp/WEB-INF/views/header.jspf
@@ -5,289 +5,70 @@
 <%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>  
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<style>
 
-header{
-     box-sizing: content-box ;    
-     
-     margin: 0 auto ;
-}
+<link rel="stylesheet" href="./css/header.css">
 
-#top-box {
-    width: 100vw;
-    height: 15px;
-    position: fixed;
-    z-index: 2;
-    background-color: #ffd04d;
-    border-style: solid;
-    border-color: #ffd04d;
-    right: 0px;
-}   
+<div id="logoContainer">
 
-#top-container {
-    height: 120px;
-    display: inline-flex;
-    /*! flex-wrap: wrap; */
-    justify-content: space-between;
-    width: 1182px;
-    top: 50px;
-    position: relative;
-}
+    <%-- Logo --%>
+    <a href="${pageContext.request.contextPath}"><img src="https://peoplecertproject.s3.eu-central-1.amazonaws.com/UI/bookaporta-logo.png" alt="bookLogo" id="bookaportaLogo" /></a>
+
+    <%-- Search bar --%>
+    <form action="" id="form">
+        <input type="text" placeholder="Search..." id="searchText" />
+        <input type="button" value="" id="searchButton" />
+    </form>
     
-#logo {
-	/* ; */
-	cursor: pointer;
-	position: relative;
-	/*! top: 50px; */
-	/* left: 60px; */
-	margin-left: 20px;
-        height: 60px;
-	flex-basis: 350px;
-	flex: 1 1 350px;
-}
+    <%-- What is this line ?--%>
+    <div id="suggestions" hidden="false">${suggestions}</div>
 
-#search {
+    <div id="Myaccount"><sec:authorize access="!isAuthenticated()">
+                <!-- if user is not authenticated, show this link. Otherwise, it stays hidden.--> 
 
-	display: inline-flex;
-	/*! position: sticky; */
-	/*! margin: 0 20px; */
-	/* padding-top: 20px; */
-	top: 50px;
-	height: 60px;
-	/*! width: 450px; */
-	/*! float: right; */	font-size: 16pt;
-	left: 40px;
-	flex-basis: 250px;
-	flex: 1 1 min-content;
-}
+                <h3><a class="nav-link" href="${pageContext.request.contextPath}/login">Account</a></h3>
+            </sec:authorize> 
+            <sec:authorize access="hasRole('ADMIN')">
+                 <p>Welcome, <sec:authentication property="principal.username"/>!</p>
+                <input type="button"  onclick="toggleModal()" id="account-checkbox" value="Μy Account"/>       
+            </sec:authorize>
+            <sec:authorize access="hasRole('CUSTOMER')">
+                <p>Welcome, <sec:authentication property="principal.username" />!</p>
+                <input type="button"  onclick="toggleModal()" id="account-checkbox" value="Μy Account"/>
+            </sec:authorize>
+            <sec:authorize access="hasRole('SERVICEAGENT')">
+                <p>Welcome, <sec:authentication property="principal.username" />!</p>
+                <input type="button"  onclick="toggleModal()" id="account-checkbox" value="Μy Account"/>            
+            </sec:authorize>   
+            <sec:authorize access="hasRole('STOCKMANAGER')">   
+                <p>Welcome, <sec:authentication property="principal.username" />!</p>
+                <input type="button"  onclick="toggleModal()" id="account-checkbox" value="Μy Account"/>
+            </sec:authorize>    </div>
 
-#searchBar {
-	/* position: relative; */
-	display: inline-flex;
-	/* width: 200px; */
-	flex: 0 0 60px;
-	/* border-radius: 3px 0 0 3px; */
-	/* margin: 0 auto; */
-	/* left: 100px; */
-	/* top: 15px; */
-}
-#bookLogo{
-    height:180px;
-    width:300px;
-}
+    <%-- Cart --%>
+    <div id="cart">
 
-#searchField {
- font-size: 16px;
-}
-   
-#searchBar #searchBox input[type="submit"] {
-	display: flex;
-	flex: 0 0 40px;
-	position: relative;
-	width: 100%;
-	min-height: 1px;
-	padding-right: 24px;
-	padding-left: 24px;
-	background-color: #ffd04d;
-	height: 60px;
-
-	color: #ffd04d;
-	cursor: pointer;
-	background-image: url("magnifier.png");
-	background-repeat: no-repeat;
-	background-position: center center;
-	background-size: 19px;
-	border-style: solid;
-	border-width: 2px;
-	border-color: #ffd04d;
-	border-radius: 0 3px 3px 0;
-        margin-left: -2px;
-	font-size: 0;
-    }
-    
-#account-checkbox {
-        left: 3%;
-	bottom: 30px;
-	/*! position: relative; */
-        height: 40px;
-        
-	background-color: white;
-	border: none;
-	border-bottom: 3px solid #2794ad;
-	font-size: 14pt;
-        height: 30px;
-}
-
-#Myaccount {
-    /*! display: flex; */
-    /*! position: absolute; */
-    /*! height: 50px; */
-    margin-top: 50%;
-   
-}
-.myAccount p {
-    font-family: "Georgia", serif;
-    font-style: oblique;
-    font-size: 12pt;
-    border: none;
-    bottom: 39px;
-    position: absolute;
-    width: max-content;
-}
-.myAccount-modal {
-        position: relative;
-        display: inline-block;
-        left: 350px;
-        top: 20px;
-    }
-    
-#my-account-menu {
- padding: 15px;
-}
-
-#login-modal {
-	position: absolute;
-	font-family: Helvetica, Arial, sans-serif;
-	z-index: 10;
-	height: auto;
-	width: 200px;
-	background-color: white;
-	color: #2794ad;
-	display: none;
-	border-radius: 5px;
-	border: 1px solid #cccccc;
-	right: 120px;
-	top: 120px;
-	/* width: min-content; */        font-size: 14pt;
-        text-decoration: none;
-	text-align: start;
-	box-shadow: 3px 3px 12px lightgrey;
-}     
-#command {
- display: grid;
- background: none;
- /*! color: beige; */
-}
-
-#cart {
-	position: relative;
-	display: block;
-	color: black;
-	/*! top: 18px; */
-	cursor: pointer;
-	/* margin-left: 40px; */
-	height: 80px;
-	width: 80px;
-	flex: 1 1 max-content;
-	left: 30px;
-	bottom: 20px;
-        margin-top:30%;
-}
-
-#cart-img {
-	background-image: url("basket.optimized.svg");
-	background-size: 130px 110px;
-	background-repeat: no-repeat;
-	width: 130px;
-	height: 110px;
-	/*! top: 20px; */
-	position: relative;
-}
-
-#cart-amount {        
-    position: relative;
-    top: 34px;
-    left: 31px;
-    width: min-content;
-    z-index: 2;
-}
-        
-#cart a {
-	/*! bottom: 200px; */
-        /*! left: 36px; */
-	position: relative;
-        text-decoration: none;
-        color: black;
-        display: block;
-	width: 111px;
-	height: 65px;
-}   
-    
-.clickable {
- height: 80px;
- width: 80px;
- right: 50px;
- position: relative;
-}
-  
-
-.clickable p {  
-	margin: 0;
-	width: min-content;
-	position: relative;
-	left: 32px;
-}
-
-</style>
-
-
-    
-          
-        
- <section id="partWithLogo">
- <div class="row">
-        <!-- 3 sthles/row sto megalo viewport, 2 sto mikrotero, kai 1 otan mikrunei teleiws -->
-        <div class="col-lg-4">
-          <!-- bazw sto 1/3 ths sthlhs 2 boxes->ara div, ara to ena katw ap to allo
-          titlos +logia -->
-          
-            <a href="${pageContext.request.contextPath}">
-            <img src="https://peoplecertproject.s3.eu-central-1.amazonaws.com/UI/bookaporta-logo.png" alt="bookLogo" id="bookLogo" />
-        </a>
-        
-        </div>
-        <div class="col-lg-1"></div>
-        <div class="col-lg-3">
-          <form action="" id="form">
-               
-            <input type="text" placeholder="Search..." id="searchText" />
-            <input type="button" value="" id="searchButton" />
-          </form>
-            <div id="suggestions" hidden="false">${suggestions}</div>
-        </div>
-        <div class="col-lg-2">
-      
-        </div>
-        <div class="col-lg-2">
-           <div id="cart" style="margin-top:40%;">
-             <% int cartAmount = 0; %>
-              <c:forEach var="cartitem" items="${sessionScope.cart}">
+        <% int cartAmount = 0; %>
+            <c:forEach var="cartitem" items="${sessionScope.cart}">
                   
-                       <c:set var="item" value="${cartitem.quantity}"></c:set>
+                <c:set var="item" value="${cartitem.quantity}"></c:set>
 
                 <% cartAmount = cartAmount + (int) pageContext.getAttribute("item");  %>
                   
-              </c:forEach>
+            </c:forEach>
               
              <div id="number"><%=cartAmount%></div>
+
              <div class="clickable">
-            <a id="cart-img" href="${pageContext.request.contextPath}/cart/index">
-                <img  id="basketIcon" src="https://peoplecertproject.s3.eu-central-1.amazonaws.com/UI/basket.optimized.svg" alt="basketIcon">
-            </a>
+                <a id="cart-img" href="${pageContext.request.contextPath}/cart/index">
+                    <img  id="basketIcon" src="./images/basket.optimized.svg" alt="basketIcon">
+                </a>
             </div> 
-        </div>    
     </div>
             
              
-            
-          
-        </div>
-                
-      
 
-        <!--autes einai oi epiloges pou tha exei o user/admin klp otan kanei login ,sxetika me to profile tou-->
-    
-        <div id="login-modal" style="background-color:white;   width:200px; margin-left:65%; ">
+    <!--autes einai oi epiloges pou tha exei o user/admin klp otan kanei login ,sxetika me to profile tou-->
+    <div id="login-modal">
             <div >
                 <ul id="my-account-menu"   >
                     <sec:authorize access="hasRole('ADMIN')">
@@ -339,26 +120,27 @@ header{
                 </ul>
             </div>
         </div> 
-        </section>
+    
+</div>
                
  
-                 <hr>
+    
+
+<hr>
                 
-                <!--edw teleiwnei to basiko header -->
 
 
-  <!--edw ksekinaei to menu -->
-  
-    
-    <section class="section">
-        <div class="container" >
-  <div class="row" >
+<!--edw ksekinaei to menu -->
+<section class="section">
+    <div class="container" >
+        <div class="row" >
       
-    <div class="col-3" >
-        <div class="dropdown">
+            <div class="col-3" >
+                <div class="dropdown">
     
-  <a class="dropbtn" style="color:black;  font-size: 1.5em">BOOKS</a>
-  <div class="dropdown-content">
+                    <a class="dropbtn">BOOKS</a>
+
+                    <div class="dropdown-content">
     
          <div class="row ">
             
@@ -381,7 +163,7 @@ header{
     <div class="col-3">
        <div class="dropdown">
     
-   <a class="dropbtn" style="color:black; font-size: 1.5em">AUTHORS</a>
+    <a class="dropbtn">AUTHORS</a>
   <div class="dropdown-content">
     
          <div class="row ">
@@ -406,18 +188,14 @@ header{
         </div>
     </div>
     <div class="col-1">
-        <a class="dropbtn" style="color:black; font-size: 1.5em" href="${pageContext.request.contextPath}/bestsellers">BESTSELLERS</a>
+        <a class="dropbtn" href="${pageContext.request.contextPath}/bestsellers">BESTSELLERS</a>
     </div>
       <div class="col-2"></div>
-      <div class="col-3" id="freeHomeDelivery">
-          <h5 id="freeHomeDeliveryText">JEFF BEZOS ΓΑΤΑΚΙ,ΕΡΧΟΜΑΣΤΕ</h5>
-      </div>
   </div>
 </div>
 
     
-         
-        </section>
+</section>
   
                   
 
@@ -426,16 +204,16 @@ header{
 
 
     <hr style="height: 1px; border-width: 0; color: #e0e0e0; background-color: #e0e0e0;"/>
-     </section>
+</section>
 
 
 
-<script>
+<%-- <script>
     let loginModal = document.getElementById("login-modal");
     function toggleModal()
     {
         if (loginModal.style.display !== "inline-block") loginModal.style.display = "inline-block";
         else loginModal.style.display = "none";
     } 
-</script>    
+</script>     --%>
 
