--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -4,14 +4,15 @@
 /********************/
 
 #logoContainer{
+   padding-top: 5%;
    display: flex;
    justify-content: center;
    gap: 100px;
 }
 
 #bookaportaLogo{
-   height:100px;
-   width:300px;
+   height:65px;
+   width:250px;
 }
 
 #searchField {
@@ -108,33 +109,45 @@ margin-left: 50px;
  font-family: proxima-nova, arial, sans-serif;
 }
 
-/*edw teleiwse to header*/
+/*********************/
+/* Category MENU BAR
+/*********************/
 
-/*********************
-/* NAVIGATION MENU BAR
-/*********************
-
-/* The container <div> - needed to position the dropdown content */
-.section{
-   margin-top:0;
-   height:auto;
+#categoryMenuContainer{
+   margin-left: 15%;
+   display: flex;
+   justify-content: space-evenly;
+   gap: 100px;
 }
+
+#bestSellersLink{
+
+   color:black;
+   text-decoration: none;
+   
+}
+
+#bestSellersLink:hover{
+   color:#2794ad;
+}
+
 .dropdown {
  position: relative;
  display: inline-block;
  
 }
 .dropbtn{
-    width:8em;
+   font-size: large;
+   font-weight: bold;
+   width:8em;
 }
 
-/* Dropdown Content (Hidden by Default) */
 .dropdown-content {
  display: none;
  position: absolute;
  text-align:center;
  width:300px;
- background-color: #f1f1f1;
+ background-color: white;
  min-width: 200px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
@@ -150,7 +163,7 @@ margin-left: 50px;
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {sbackground-color: #ddd;}
+.dropdown-content a:hover {background-color: #ddd;}
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {display: block;}
