--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -5,14 +5,15 @@
 
 #logoContainer{
 
-   padding-top: 5%;
+   padding-top: 4%;
+   padding-bottom: 2%;
    display: flex;
    justify-content:space-evenly;
    align-items: flex-end;
 }
 
 #bookaPortaLink, #bookaportaLogo {
-   height: 65px;
+   height: 55px;
    width: 250px;
 }
 
